linux-4.14.14-1-wanderer (4.14.14-1.4) xenial; urgency=medium

  * Add cpufreq compatibility line for A64
  * Update wanderer2 dts to support u-boot selection of ethernet
    switch KSZ8794 or PHY KSZ8081
  * Support manufacturing info in device tree (populated by u-boot)
  * Add hook and script for auto update of extlinux.conf

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Thu, 01 Nov 2018 08:09:33 +1300

linux-4.14.14-1-wanderer (4.14.14-1.3) xenial; urgency=medium

  * Support for SOPINE w25q128 SPI flash as mtd
  * And debug and fix for above

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Fri, 26 Oct 2018 17:56:02 +1300

linux-4.14.14-1-wanderer (4.14.14-1.2) xenial; urgency=medium

  * Debian build via rules file, based on kernel builddeb script

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Wed, 17 Oct 2018 13:25:06 +1300

linux-4.14.14-1-wanderer (4.14.14-1.1) xenial; urgency=medium

  * Wanderer device tree
  * SPI device fixed
  * Support KSZ8794 network switch
  * Power sequencing for WiFi
  * Merge A64 audio codec support
  * Add DMA device support in dts

 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Tue, 16 Oct 2018 15:35:44 +1300

linux-4.14.14-1-wanderer (4.14.14-1.0) xenial; urgency=medium

  * Initial release
  * Forked from https://github.com/CallMeFoxie/linux/tree/e6b9ad549f6cf69ae9b2cb47a06c5f318a826eab
  
 -- Michael Walton <mwalton@fsn-mike.intranet.farsouthnet.com>  Fri, 14 Sep 2018 16:51:08 +1300